修改时间配置

--- a/study-spring-boot/src/main/resources/application.properties
+++ b/study-spring-boot/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 debug=trues
 server.port=9090
-#spring.main.show-banner=false
+#BANNER
+#banner.charset=UTF-8
+#banner.location=classpath:banner.txt
